--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -27,4 +27,6 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: ls
-        run: ls
+        run: |
+          sudo apt install tree
+          tree
