--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -29,5 +29,6 @@ jobs:
       - name: ls
         run: |
           git submodule update --init
+          git submodule update --remote --recursive --merge
           sudo apt install tree
           tree
